# Redmine-RAG

./: .env.example  .gitignore  pyproject.toml
redmine-rag/: embeddings.py  retrievalQA.py
redmine_rag/core/: __init__.py
redmine_rag/embedding/: embedding.py
redmine_rag/generation/: chat.py
redmine_rag/redmine/: client.py  get_all_paths.py
redmine_rag/redmine/models/: Issue.py
redmine_rag/services/: embed_issues.py
